# scrcpyHmos

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  build-profile.json5
.claude/: settings.local.json
AppScope/: app.json5
AppScope/resources/base/element/: string.json
app/: build-profile.json5
app/src/main/: module.json5
app/src/main/cpp/: CMakeLists.txt  ScrcpyStreamManager.cpp  ScrcpyStreamManager.h  audio_decoder_native.cpp  audio_decoder_native.h  napi_init.cpp  native_buffer_pool.cpp  native_buffer_pool.h  video_decoder_native.cpp  video_decoder_native.h  video_stream_processor.cpp  video_stream_processor.h
app/src/main/cpp/adb/: Adb.cpp  Adb.h  AdbBase64.cpp  AdbChannel.h  AdbKeyPair.cpp  AdbKeyPair.h  AdbPair.cpp  AdbProtocol.cpp  AdbProtocol.h  LocalSocketChannel.cpp  LocalSocketChannel.h  PairingAuth.cpp  RingBuffer.h  TcpChannel.cpp  TcpChannel.h  TlsConnection.cpp
app/src/main/cpp/adb/channel/: LocalSocketChannel.cpp  LocalSocketChannel.h  TcpChannel.cpp  TcpChannel.h  TlsAdbChannel.cpp  TlsAdbChannel.h
app/src/main/cpp/adb/core/: Adb.cpp  Adb.h  AdbProtocol.cpp  AdbProtocol.h
app/src/main/cpp/adb/crypto/: AdbBase64.cpp  AdbBase64.h  AdbKeyPair.cpp  AdbKeyPair.h
app/src/main/cpp/adb/pairing/: AdbPair.cpp  AdbPair.h  PairingAuth.cpp  PairingAuth.h  TlsConnection.cpp  TlsConnection.h
app/src/main/cpp/adb/util/: RingBuffer.h
app/src/main/cpp/decoder/: AudioDecoderNative.cpp  AudioDecoderNative.h  VideoDecoderNative.cpp  VideoDecoderNative.h
app/src/main/cpp/manager/: ScrcpyStreamManager.cpp  ScrcpyStreamManagerAudio.cpp  ScrcpyStreamManagerControl.cpp  ScrcpyStreamManagerLifecycle.cpp  ScrcpyStreamManagerReverse.cpp  ScrcpyStreamManagerVideo.cpp
app/src/main/cpp/stream/: EncodedPacket.h  MediaPacketStore.h  StreamIO.cpp  StreamIO.h  StreamStats.cpp  StreamStats.h
app/src/main/cpp/stream/adapters/: ForwardStreamAdapter.cpp  ForwardStreamAdapter.h  ReverseStreamAdapter.cpp  ReverseStreamAdapter.h
app/src/main/cpp/types/libscrcpy/: index.d.ts
app/src/main/cpp/types/libscrcpy_native/: index.d.ts
app/src/main/ets/adb/: Adb.ets  AdbBase64.ets  AdbChannel.ets  AdbKeyPair.ets  AdbProtocol.ets  TcpChannel.ets  index.ets
app/src/main/ets/buffer/: Buffer.ets  BufferNew.ets  BufferStream.ets  NativeBufferPool.ets  index.ets
app/src/main/ets/client/: Client.ets
app/src/main/ets/client/decode/: AudioDecoder.ets  DecodecTools.ets  VideoDecoder.ets
app/src/main/ets/client/tools/: ClientController.ets  ClientPlayer.ets  ClientStream.ets  ControlPacket.ets  NativeStreamClient.ets
app/src/main/ets/client/view/: FullActivity.ets
app/src/main/ets/entity/: Device.ets  MyInterface.ets
app/src/main/ets/helper/: AdbDeviceService.ets  AdbKeyManager.ets  AdbTransferService.ets  ClientSessionManager.ets  Logger.ets  PreferencesHelper.ets  PublicTools.ets  ServerManager.ets  TransferNotificationHelper.ets
app/src/main/ets/pages/: AboutPage.ets  AdbManagePage.ets  ConfigDescPage.ets  ControlPage.ets  DeviceDetail.ets  HelpPage.ets  Index.ets  LanguagePage.ets  LogPage.ets  ThemePage.ets  WirelessAdbPairPage.ets
app/src/main/ets/scrcpyhmosability/: ScrcpyHmosAbility.ets
app/src/main/ets/scrcpyhmosbackupability/: ScrcpyHmosBackupAbility.ets
app/src/main/ets/types/: libscrcpy_native.d.ts
app/src/main/ets/workers/: StreamWorker.ets  VideoWorker.ets  WorkerMessages.ets.bak
app/src/main/resources/base/element/: color.json  string.json
app/src/main/resources/base/profile/: main_pages.json
app/src/main/resources/dark/element/: color.json
app/src/main/resources/en_US/element/: string.json
app/src/main/resources/zh_CN/element/: string.json
app/src/ohosTest/: module.json5
